# vim: set noexpandtab:

2012-08-07 Steve
	* Changed default btag WP to MV1 @ 85%

2012-08-01 Steve
	* Added streamer for vector<Tau>
		* Somehow it was able to write out the taus fine without this???  WTF??
	* Tagging SusyNtuple-00-00-20

2012-07-31 Steve
	* Updated README and install script
	* Incremented ClassDef number for Met class (oops)
	* Tagging SusyNtuple-00-00-19

2012-07-31 Anyes
	* Updates to TGuiUtils

2012-07-31 Steve
	* Added heavy flavor overlap removal decision to Event as hfor
	* Tagging SusyNtuple-00-00-18

2012-07-30 Steve
	* Added flag for toggling tau selection
	* Added functions for selecting taus
		* baseline objects, overlap removal, signal objects
	* Tau class now inherits from Lepton
		* I'm not totally sure of this... Need to consider all of the use cases.
		  For example, we don't want to blindly use hasZ(leptons) when leptons contains taus, 
		  because the Mll is not really expected to reproduce the Z peak...
			* I added switches to hasZ, etc.  They will ignore taus by default
		* Lepton has variables unnecessary for taus, so we may want to move things around later.
		* I will keep everything backwards compatible for now and not change the Lepton class
	* Adding softJet and refGamma terms to the Met class
	* Tagging SusyNtuple-00-00-17

2012-07-29 Matt
	* Fixed dilepton ee trig logic

2012-07-29 Steve
	* Added taus to SusyNtObject
	* Added tau variables, print method, etc.
	* Tagging SusyNtuple-00-00-16

2012-07-27 Steve
	* Moved many of the kinematic functions from SusyDefs into SusyNtTools
		* Should not affect usage within classes inheriting from SusyNtTools or SusyNtAna

2012-07-25 Steve
	* Updated usage of removeSFOSPair function
	* Adding a Tau class, mostly empty so far
	* Correcting MUON_ETCONE30_K1_DATA constant

2012-07-20 Matt
	* Added ET_me to DiLepEvtType
	* Updated method to retrieve DiLepEvtType
	* Updated DilTrigLogic package -- major changes
	       * Call passDilTrig() to see if event and trigger matching pass